fix overflow

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -149,4 +149,9 @@
     .footer-left h1 {
         margin-bottom: 20px
     }
+
+    .footer-right .one {
+        height: max-content;
+        width: 100%;
+    }
 }
